--- a/src/app.html
+++ b/src/app.html
@@ -2,15 +2,12 @@
 <html lang="en" class="h-full bg-gray-100">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<!-- <link rel="icon" href="/favicon.png" /> -->
-		<!-- <link rel="icon" href="%svelte.assets%/favicon.png" /> -->
-
+		<meta name="description" content="Real Estate Admin Panel" />
+		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
 	<body>
-		<div id="svelte">%svelte.body%</div>
-		<!-- <div>%svelte.body%</div> -->
+		<div>%svelte.body%</div>
 	</body>
 </html>
