--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,10 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="Real Estate Admin Panel" />
 		<!-- <link rel="icon" href="%svelte.assets%/favicon.png" /> -->
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, maximum-scale=1"
+		/>
 		%svelte.head%
 	</head>
 	<body>
