--- a/packages/site/src/app.html
+++ b/packages/site/src/app.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="Real Estate Admin Panel" />
-		<!-- <link rel="icon" href="%svelte.assets%/favicon.png" /> -->
+		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, maximum-scale=1"
 		/>
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body class="h-full">
-		<div>%svelte.body%</div>
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
