--- a/packages/site/src/app.html
+++ b/packages/site/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="Real Estate Admin Panel" />
 		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
+		<link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, maximum-scale=1"
